Temporary removed react-snap

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=0">
-    <meta name="theme-color" content="#0E0B20" data-react-helmet="true" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=0">
+    <meta name="theme-color" content="#0E0B20" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:100,100i,300,300i,400,400i,500,500i,700,700i"
+          rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <script async="" src="https://embed.tawk.to/5d545b1ceb1a6b0be6078e50/default" charset="UTF-8" crossorigin="*"></script>
+    <script async="" src="https://embed.tawk.to/5d545b1ceb1a6b0be6078e50/default" charset="UTF-8"
+            crossorigin="*"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -23,6 +26,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Cloud Keeper</title>
+    <meta content="In-depth monitoring for Serverless AWS applications" name="description">
+    <meta content="Cloud Keeper" property="og:title">
+    <meta content="In-depth monitoring for Serverless AWS applications"
+          property="og:description">
+    <meta content="website" property="og:type">
+    <meta content="en" property="og:locale">
+    <meta content="summary" name="twitter:card">
+    <meta content="Cloud Keeper" name="twitter:title">
+    <meta content="In-depth monitoring for Serverless AWS applications" name="twitter:description">
+    <meta content="512" name="og:image:width">
+    <meta content="512" name="og:image:height">
+    <meta content="/logo.png" name="og:image">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
